# tolerant-toposort

./: .gitignore  Changelist.md  README.md  pyproject.toml  setup.cfg  setup.py  unittest.cfg
.github/workflows/: python_package.yaml
doc/tolerant/: index.html  toposort.html
example/: example.py
src/: __init__.py
src/tests/: test_toposort.py
src/tolerant/: __init__.py  toposort.py
tests/: test_tolerant_toposort.py  test_toposort.py
