[metadata]
name = tolerant.toposort
version = 1.7.dt
author = David Turland  
author_email = david@turland.org
description = Extension of toposort to tolerate existing but disabled nodes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidTurland/toposort
project_urls =
    Original    = https://pypi.org/project/toposort
    Bug Tracker = https://github.com/DavidTurland/toposort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
