# [metadata]
# name             = tolerant_toposort
# author           = David Turland  
# author_email     = david@turland.org
# description      = Extension of toposort to tolerate existing but disabled nodes
# license_file     = LICENSE-2.0.txt
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/DavidTurland/toposort
# project_urls =
#     Original    = https://pypi.org/project/toposort
#     Bug Tracker = https://github.com/DavidTurland/toposort/issues
#     SetupTools  = https://setuptools.pypa.io/en/latest/userguide/index.html
#classifiers =
#     Programming Language :: Python :: 3
#     License              :: OSI Approved :: Apache License Version 2.0
#     Operating System     :: OS Independent

#[options]
#package_dir =
#    = src
#packages = find:
#python_requires = >=3.6

#[options.packages.find]
#where = src
